Fixed home button direction and carousel that got stuck

--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,3 @@
 .navbar .navbar-brand img {
     margin-left: 100px;
 }
-
-body {
-    background-color: #e1e1e1;
-}
